<resources>
    <string name="app_name">Social Messenger</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signIn">SIGN IN</string>
    <string name="signInFB">SIGN IN WITH FACEBOOK</string>
    <string name="newUser">New user in Social messenger?</string>
    <string name="send">Send</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username (Max 10 chars)</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
</resources>
