<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bgColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="350dp"
            android:layout_height="130dp"
            android:src="@drawable/logo"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"/>

        <Button
            android:id="@+id/login_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/title"
            android:layout_alignEnd="@+id/title"
            android:layout_below="@+id/logo"
            android:text="@string/signInFB"
            android:background="@drawable/mybutton"
            android:textColor="@color/bgColor"
            android:layout_marginTop="20dp"/>

        <RelativeLayout
            android:id="@+id/horizontalLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/login_facebook">

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Or"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@color/bgColor"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>

        </RelativeLayout>


        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/title"
            android:layout_alignEnd="@+id/title"
            android:layout_below="@+id/login_facebook"
            android:hint="@string/email"
            android:layout_marginTop="40dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/title"
            android:layout_alignEnd="@+id/title"
            android:hint="@string/password"
            android:layout_below="@+id/username"/>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/title"
            android:layout_alignEnd="@+id/title"
            android:layout_below="@+id/password"
            android:text="@string/signIn"
            android:background="@drawable/mybutton"
            android:textColor="@color/bgColor"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/newUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newUser"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/login"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:textColor="@drawable/link_color"/>

    </RelativeLayout>
</RelativeLayout>